--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "fragments",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
+  "version": "0.0.1",
+  "description": "Fragments back-end API",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DennisBaksheev/fragments.git"
+  },
+  "author": "Dennis",
+  "license": "UNLICENSED"
 }
