--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Fragments back-end API",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-  "lint": "eslint --config .eslintrc.js \"./src/**/*.js\""
+    "lint": "eslint --config .eslintrc.js \"./src/**/*.js\""
   },
   "repository": {
     "type": "git",
@@ -16,7 +16,15 @@
   "devDependencies": {
     "eslint": "^8.49.0",
     "eslint-plugin-react": "^7.33.2"
+  },
+  "dependencies": {
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "helmet": "^7.0.0",
+    "pino": "^8.15.1",
+    "pino-http": "^8.5.0",
+    "pino-pretty": "^10.2.0",
+    "stoppable": "^1.1.0"
   }
-  
-  
 }
