--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "dev": "cross-env LOG_LEVEL=debug nodemon ./src/index.js --watch src",
     "debug": "cross-env LOG_LEVEL=debug nodemon --inspect=0.0.0.0:9229 ./src/index.js --watch src"
   },
-  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DennisBaksheev/fragments.git"
@@ -24,11 +23,14 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "aws-jwt-verify": "^4.0.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
+    "passport": "^0.6.0",
+    "passport-http-bearer": "^1.0.1",
     "pino": "^8.15.1",
     "pino-http": "^8.5.0",
     "pino-pretty": "^10.2.0",
