--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "supertest": "^6.3.3"
   },
   "dependencies": {
+    "amazon-cognito-identity-js": "^6.3.6",
     "aws-jwt-verify": "^4.0.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
