--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,16 +10,13 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v3
-
       - name: Setup node
         uses: actions/setup-node@v3
         with:
           node-version: '18'
           cache: 'npm'
-
       - name: Install node dependencies
         run: npm ci
-
       - name: Run ESLint
         run: npm run lint
 
@@ -38,13 +35,11 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v3
-
       - name: Setup node
         uses: actions/setup-node@v3
         with:
           node-version: '18'
           cache: 'npm'
-
       - name: Install node dependencies and run Tests
         run: npm install-ci-test
 
@@ -53,23 +48,18 @@ jobs:
     needs: [lint, dockerfile-lint, unit-tests]
     runs-on: ubuntu-latest
     steps:
-    # Set up buildx for optimal Docker Builds
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-
-    # Login to Docker Hub using GitHub secrets
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-    # Build and Push an Image to Docker Hub
       - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          push: true
+          tags: ${{ env.DOCKERHUB_REPO }}:${{ env.SHA_TAG }}, ${{ env.DOCKERHUB_REPO }}:main, ${{ env.DOCKERHUB_REPO }}:latest
         env:
-        DOCKERHUB_REPO: dennisbaksheev1/fragments # Replace `username` with your Docker Hub username
-        SHA_TAG: sha-${{ github.sha }}
-      uses: docker/build-push-action@v4
-      with:
-        push: true
-        tags: ${{ env.DOCKERHUB_REPO }}:${{ env.SHA_TAG }}, ${{ env.DOCKERHUB_REPO }}:main, ${{ env.DOCKERHUB_REPO }}:latest
+          DOCKERHUB_REPO: dennisbaksheev1/fragments
+          SHA_TAG: sha-${{ github.sha }}
