--- a/.dockerignore
+++ b/.dockerignore
@@ -2,8 +2,14 @@
 .vscode/
 coverage/
 node_modules/
+tests/
+!tests/.htpasswd
+.env
 .eslintrc.js
 .git/
 .gitignore
 .prettier*
 jest*
+.svn/
+**/.DS_Store
+
