--- a/package.json
+++ b/package.json
@@ -1,46 +1,57 @@
 {
   "name": "fragments",
+  "version": "0.7.5",
   "private": true,
-  "version": "0.7.0",
-  "description": "Fragments back-end API",
+  "description": "CCP555 fragments back-end API",
+  "main": "index.js",
   "scripts": {
     "test:watch": "jest -c jest.config.js --runInBand --watch --",
     "test": "jest -c jest.config.js --runInBand --",
     "coverage": "jest -c jest.config.js --runInBand --coverage",
-    "lint": "eslint --config .eslintrc.js \"./src/**/*.js\" \"tests/**/*.js\"",
+    "lint": "eslint --config .eslintrc.js src/** tests/**",
     "start": "node src/index.js",
-    "dev": "cross-env LOG_LEVEL=debug nodemon ./src/index.js --watch src",
+    "dev": "LOG_LEVEL=debug nodemon ./src/index.js --watch src",
     "debug": "cross-env LOG_LEVEL=debug nodemon --inspect=0.0.0.0:9229 ./src/index.js --watch src"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DennisBaksheev/fragments.git"
   },
-  "author": "Dennis",
+  "keywords": [],
+  "author": "DennisBaksheev",
   "license": "UNLICENSED",
+  "bugs": {
+    "url": "https://github.com/DennisBaksheev/fragments/issues"
+  },
+  "homepage": "https://github.com/DennisBaksheev/fragments#readme",
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "eslint": "^8.49.0",
-    "eslint-plugin-react": "^7.33.2",
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.1",
+    "eslint": "^8.31.0",
+    "jest": "^29.4.1",
+    "nodemon": "^2.0.20",
+    "prettier": "2.8.3",
     "supertest": "^6.3.3"
   },
   "dependencies": {
-    "amazon-cognito-identity-js": "^6.3.6",
-    "aws-jwt-verify": "^4.0.0",
+    "aws-jwt-verify": "^3.3.0",
+    "body-parser": "^1.20.1",
     "compression": "^1.7.4",
+    "content-type": "^1.0.5",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "helmet": "^7.0.0",
+    "helmet": "^6.0.1",
     "http-auth": "^4.2.0",
     "http-auth-passport": "^1.0.7",
+    "markdown-it": "^13.0.2",
+    "node-fetch": "^3.3.0",
     "passport": "^0.6.0",
     "passport-http-bearer": "^1.0.1",
-    "pino": "^8.15.1",
-    "pino-http": "^8.5.0",
-    "pino-pretty": "^10.2.0",
+    "path": "^0.12.7",
+    "pino": "^8.8.0",
+    "pino-http": "^8.3.1",
+    "pino-pretty": "^9.1.1",
     "stoppable": "^1.1.0"
   }
 }
