--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 
 # AWS Amazon Cognito Client App ID (use your Client App ID)
  AWS_COGNITO_CLIENT_ID=4ks4gopjl273115is1rh76r5bi
-
+# HTPASSWD_FILE=tests/.htpasswd
 
 # API_URL=http://localhost:8080
 # API_URL=http://ec2-3-82-205-58.compute-1.amazonaws.com
