--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "CCP555 fragments back-end API",
   "main": "index.js",
   "scripts": {
+    "test:integration": "hurl --test --glob \"tests/integration/**/*.hurl\"",
     "test:watch": "jest -c jest.config.js --runInBand --watch --",
     "test": "jest -c jest.config.js --runInBand --",
     "coverage": "jest -c jest.config.js --runInBand --coverage",
@@ -25,6 +26,7 @@
   },
   "homepage": "https://github.com/DennisBaksheev/fragments#readme",
   "devDependencies": {
+    "@orangeopensource/hurl": "^4.1.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.31.0",
     "jest": "^29.4.1",
