Update ECS config and workflow for S3 integration

--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # AWS Amazon Cognito User Pool ID (use your User Pool ID)
-  AWS_COGNITO_POOL_ID=us-east-1_3aBCMHcjR
+  # AWS_COGNITO_POOL_ID=us-east-1_3aBCMHcjR
 
 # AWS Amazon Cognito Client App ID (use your Client App ID)
-  AWS_COGNITO_CLIENT_ID=4ks4gopjl273115is1rh76r5bi
-# HTPASSWD_FILE=tests/.htpasswd
+  # AWS_COGNITO_CLIENT_ID=4ks4gopjl273115is1rh76r5bi
+ HTPASSWD_FILE=tests/.htpasswd
 
-# NODE_ENV=development
-# API_URL=http://localhost:8080
+NODE_ENV=development
+API_URL=http://localhost:8080
 # API_URL=http://ec2-3-82-205-58.compute-1.amazonaws.com
-API_URL=http://MyLoadBalancer-595404775.us-east-1.elb.amazonaws.com:8080
+# API_URL=http://MyLoadBalancer-595404775.us-east-1.elb.amazonaws.com:80
