--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -36,6 +36,8 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
+        env:
+          AWS_REGION: us-east-1
 
       # Build and Push an Image to Amazon ECR
       - name: Build and push to Amazon ECR
@@ -50,6 +52,7 @@ jobs:
           # if we have to test or debug something. Second, we'll also replace the
           # `latest` tag, since this is our most up-to-date version.
           VERSION_TAG: ${{ github.ref_name }}
+          AWS_REGION: us-east-1
         uses: docker/build-push-action@v3
         with:
           push: true
@@ -67,6 +70,7 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPO: fragments
           VERSION_TAG: ${{ github.ref_name }}
+          AWS_REGION: us-east-1
         with:
           task-definition: fragments-definition.json
           container-name: fragments
